fixed spacing

--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -30,7 +30,6 @@ body {
 }
 
 #projects .carousel-item {
-    position: relative;
     height: 300px;
     width: 100%;
 }
